# mt-photos-ai

./: .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: __main__.py  config.py  main.py
app/routers/: clip.py  face.py  index.py  ocr.py  restart.py
cuda/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  server.py
cuda/app/: dependencies.py  main.py  scheme.py
cuda/app/routers/: clip.py  face.py  index.py  ocr.py  ping.py
cuda/app/utils/: util.py
scripts/: healthcheck.py
