[project]
name = "mt-photos-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "numpy>=1.24.4,<2",
    "opencv-contrib-python>=4.6.0.66",
    "opencv-python-headless>=4.6.0.66",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "rapidocr>=3",
    "uvicorn[standard]>=0.23.2",
    "insightface>=0.7.3",
    "requests>=2.28.1",
    "cn-clip>=1.5.1",
]

[project.optional-dependencies]
cuda = ["torch>=2.6.0", "torchvision", "torchaudio"]
cpu = ["onnxruntime>=1.21.1"]

[tool.uv]
conflicts = [[{ extra = "cuda" }, { extra = "cpu" }]]
override-dependencies = ["lmdb>=1.3,<1.5"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cuda", extra = "cuda" },
]
torchaudio = [
    { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
